--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+    <h1>Nathan Howland</h1>
+  </header>
+  
+
 </body>
 </html>
