added a small introduction to index

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <h1>Nathan Howland</h1>
   </header>
   
+  <section>
+    <h2>At a Glance</h2>
+    <p>An aspiring Full-Stack Back-End developer currently enrolled in Lambda and San Francisco State University
+      with a strong work ethic and an aptitude to learn.
+    </p>
+  </section>
 
 </body>
 </html>
