added google font

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <header>
+   
     <nav>
       <a href="#">Home</a>
       <a href="#">About</a>
@@ -30,6 +31,10 @@
       with a strong work ethic and an aptitude to learn.
     </p>
   </section>
+
+  <footer>
+    A Website made by Nathan Howland
+  </footer>
 
 </body>
 </html>
