--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>My Resume</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Barlow|Libre+Baskerville&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -17,19 +18,26 @@
   <header>
    
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <h1>Nathan Howland</h1>
   </header>
   
-  <section>
+  <section class="intro">
+    <div>
     <h2>At a Glance</h2>
     <p>An aspiring Full-Stack Back-End developer currently enrolled in Lambda and San Francisco State University
       with a strong work ethic and an aptitude to learn.
     </p>
+    <nav>
+      <a href="about.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    </div>
   </section>
 
   <footer>
