--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,10 @@
       <address>
           <h1>Nathan Howland</h1>
           <h1>(510)-XXX-XXXX</h1>
+          <h1>Nathan.Howland96@gmail.com</h1>
           <h1>5555 Computer Way</h1>
           <h1>San Francisco, CA</h1>
+          
       </address>
 
       <footer>
