--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 I loved it, I wanted to pursue Computer Science fully. I have fulfilled all the requirements for transfer and I am enrolled in San Francisco
                 State University. Wanting to expedite the hiring process, I have decided to take a 9 month bootcamp at Lambda while I wait for university to start at SFSU.</p>
           </div>
-          <div>
+          <div class="work">
             <h1>Work History</h1>
             <div>
             <p>My first non service sector job out of highschool was at Tesla motors, I started on the production line and after a while moved up to quality assurance where I did final inspection on components.</p>
