added viewport meta and updated titles added some padding to mobile view

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Portfolio</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Barlow|Libre+Baskerville&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
