--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>My Resume</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Barlow|Libre+Baskerville&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
